# cugen

./: CHANGELOG.md  README.md  pyproject.toml
cugen/: __main__.py
cugen/sat_problem_modelling/: __init__.py  crossover.py  dimacs_reader.py  evaluation.py  mutation.py  optimizer.py  selection.py
cugen/utils/: logger.py
nugen/: __main__.py
nugen/sat_problem_modelling/: dimacs_reader.py  evaluation.py  mutation.py  optimizer.py  selection.py
tests/: test_cugen.py
tests/features/: dimacs_reader.feature  sat_solver.feature
tests/features/steps/: steps_dimacs_reader.py  steps_sat_solver.py
tests/resources/: dimacs_test_file.cnf  toughsat_generated_formula.dimacs
tests/test_sat_problem_modelisation/: test_evaluation.py
tests/test_sat_problem_modelling/: test_crossover.py  test_dimacs_reader.py  test_evaluation.py  test_mutation.py  test_optimizer.py  test_selection.py
