[tool.poetry]
name = "nugen"
version = "1.0.1"
license="Apache-2.0"
description = "Using CPU to solve the boolean satisfiability problem"
authors = ["SamyAB <aitb.samy@gmail.com>"]
readme="README.md"

[tool.poetry.dependencies]
python = "^3.7"
cupy-cuda102 = "^7.5.0"
typer = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
behave = "^1.2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
nugen = "nugen.__main__:app"
